update api with docs
