# storage/api-docs/api-docs.json
@@ -440,7 +440,7 @@
                 }
             }
         },
-        "api/auth/login": {
+        "/auth/login": {
             "post": {
                 "tags": [
                     "Login"
@@ -506,7 +506,7 @@
                 }
             }
         },
-        "api/sign-up": {
+        "/sign-up": {
             "post": {
                 "tags": [
                     "Register"
